# compilers-course3

./: flake.nix
lab1/: CMakeLists.txt  lexer.cpp  lexer.h  main.cpp
lab1/detail/: states.cpp  states.h  tokentype.cpp  tokentype.h
numberParser/: CMakeLists.txt  README.md  main.cpp
